# eq2cube-converter

./: .gitignore  CMakeLists.txt  app.cpp  main-win-parallel.cpp  main-win.cpp  main.cpp
CMake/: FindTBB.cmake
app/: mainwindow.cpp  mainwindow.h  window.cpp  window.h  window.ui
functions/: create_maps.cpp  create_maps.h  math_functions.cpp  math_functions.h  thread_functions.cpp  thread_functions.h  util_functions.cpp  util_functions.h
